--- a/khb2026/css/confirm.css
+++ b/khb2026/css/confirm.css
@@ -33,6 +33,15 @@ header a {
     font-size: 1.5rem;
     color: #000000;
 }
+.top-buttons {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    gap: 0.5rem;
+    background-color: var(--pastelyellow);
+    padding: 0.5rem;
+}
 .btn-menu {
     position: absolute;
     top: 0rem;
