--- a/khb2026/css/confirm.css
+++ b/khb2026/css/confirm.css
@@ -11,6 +11,7 @@ body{
     margin: 0rem;
     color: #000000;
     height: 100%;
+    zoom: 0.8; /* 80%に縮小 */
 }
 html{
     height: 100%;
@@ -244,4 +245,5 @@ writing-mode: horizontal-tb;
   transform-origin: top right;
   /* letter-spacing と transform はJSで動的に設定 */
 }
+
 
