--- a/khb2026/css/submit.css
+++ b/khb2026/css/submit.css
@@ -13,9 +13,9 @@
     font-family: 'Noto Sans JP', sans-serif;
     }
 body {
-    font-size: 100%;
-	color: var(--grey);
-	}
+    font-size: 80%;
+    color: var(--grey);
+ }
 
 /*COMMON================================================ */
 p {
@@ -24,7 +24,7 @@ p {
 
 header,
 h2 {
-    font-size: 2rem;
+    font-size: 1.6em;
 }
 
 .wrapper {
@@ -59,14 +59,15 @@ h2 {
     background: var(--grey);
     color: var(--white);
     font-size: 1em;
-    display: block;
-    width: 100%;
-    padding: 0.5rem;
+    /* display: block; */
+    /* width: 100%; */
+    /* padding: 0.5rem; */
     margin-top: 0.5rem;
+    /* border: none; */
 }
 .submit:hover {
-    background: var(--deepgreen);
-    color: #000000;
+    /* background: var(--deepgreen); */
+    /* color: #000000; */
 }
 
 .haiku:focus-visible {
@@ -75,7 +76,6 @@ h2 {
 .name:focus-visible {
     background-color: var(--pastelgreen);
 }
-
 
 @media (max-width: 700px) {
     /* Common */
@@ -105,7 +105,4 @@ h2 {
             padding: 0.5rem;
             margin-top: 0.5rem;
         }
-        
-
-
-    }
+}
