--- a/khb2026/css/confirm.css
+++ b/khb2026/css/confirm.css
@@ -1,25 +1,25 @@
 @import url(https://fonts.googleapis.com/earlyaccess/notosansjp.css);
+@import url(./color.css);
 
-:root {
-    --white: #fff;
-    --green: #2eff2e;
-    --deepgreen: #0a7a0a;
-    --pastelgreen: #8eff8e;
-    --black: #111;
-}
 body{
     margin: 0rem;
-    color: #000000;
+    color: black;
     height: 100%;
     font-family: 'Noto Sans JP', sans-serif;
     background-color: white;
 }
 html{
     height: 100%;
+    overflow-y: hidden;
+}
+
+/* 固定ヘッダ高さのCSS変数 */
+:root {
+    --header-height: 4.5rem;
 }
 
 header {
-    background-image: linear-gradient(var(--green), var(--pastelgreen));
+    background-image: linear-gradient(var(--accent), var(--pastelaccent));
     position: fixed;
     width: 100%;
     z-index: 1;
@@ -34,7 +34,15 @@ header {
     padding: 0.5rem;
 }
 #top{
-    padding-top: 4.5rem;
+    padding-top: var(--header-height);
+}
+/* ビューポートからヘッダ分を引いた高さを親で定義し、子が継承 */
+#wrapper {
+    height: calc(100vh - var(--header-height));
+    height: calc(100dvh - var(--header-height)); /* 新しいビューポート単位に対応 */
+    display: flex;
+    flex-wrap: nowrap; /* 折り返し防止 */
+    align-items: stretch;
 }
 h2 {
     font-weight:600;
@@ -54,9 +62,9 @@ h3 {
 .left2 {
     list-style-position: inside;
     text-align: center;
-    float: left;
     width: 6%;
-    height: 90vh;
+    flex: 0 0 6%;
+    height: 100%;
     box-sizing: border-box;
     background: #ffccff;
     border: 2px solid #000000;
@@ -64,23 +72,30 @@ h3 {
 .right2 {
     list-style-position: inside;
     text-align: center;
-    float: left;
     width: 5.5%;
-    height: 90vh;
+    flex: 0 0 5.5%;
+    height: 100%;
     box-sizing: border-box;
     background: #ffffff;
     border: 2px solid #000000;
 }
 .space {
     list-style-position: inside;
-    float: left;
     width: 3.5%;
-    height: 90vh;
+    flex: 0 0 3.5%;
+    height: 100%;
     box-sizing: border-box;
     writing-mode: vertical-lr; /*視覚的な左上揃え*/
     font-size: 1.3em;
     font-weight: 600;
     text-align: left;
+}
+
+/* float列を内包するためのclearfix */
+#wrapper::after {
+    content: "";
+    display: block;
+    clear: both;
 }
         
 .kunakami {
