--- a/khb2026/css/color.css
+++ b/khb2026/css/color.css
@@ -2,7 +2,7 @@
 :root {
     --grey: #333;
     --white: #fff;
-    --accent: #2eff2e;
-    --deepaccent: #00cd00;
-    --pastelaccent: #8eff8e;
+    --accent: #7fdcff;
+    --deepaccent: #00b8f4;
+    --pastelaccent: #bfeaff;
 }
